# ShipVision

./: .gitignore  LICENSE  README.md  convert_datasets.py  correct_dataset.py  create_empty_folders.py  pyproject.toml  requirements.txt  ship_vision_train.ipynb
src/: main.py  main_dialog.py
src/ui/: main.ui  main_ui.py
