[tool.poetry]
name = "shipvision"
version = "0.1.0"
description = "Use computer vision to recognize ship type in picture"
authors = ["Oleksander  Shevchenko <oleksandr.shevchenko@damen.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
ipykernel = "^6.29.5"
ipython = "^8.28.0"
jupyter-client = "^8.6.3"
jupyter-core = "^5.7.2"
matplotlib = "^3.9.2"
matplotlib-inline = "^0.1.7"
numpy = "<2.1.0"
pillow = "^11.0.0"
scikit-learn = "^1.5.2"
scipy = "^1.14.1"
urllib3 = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
